[package]
name = "scoped_thread_local"
version = "0.1.3"
description = "Highly flexible Scoped thread local with HKT builtin"
keywords = ["scoped-tls", "scoped-thread-local", "macro", "hkt"]
authors = ["storycraft"]
license = "MIT OR Apache-2.0"
edition = "2021"
repository = "https://github.com/storycraft/scoped-thread-local"

[dependencies]
scopeguard = "1.2.0"
