[package]
name = "scoped_thread_local"
version = "0.2.0"
description = "Highly flexible Scoped thread local with HKT builtin"
keywords = ["scoped-tls", "scoped-thread-local", "macro", "hkt"]
authors = ["storycraft <storycraft@pancake.sh>"]
license = "MIT OR Apache-2.0"
edition = "2021"
repository = "https://github.com/storycraft/scoped-thread-local"

[dependencies]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
